react-app/src/components/GroupPage/GroupPage.css
.group-page {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.group-header {
    padding: 10px 30px;
    display: flex;
    justify-content: center;
}
.group-header-content {
    padding: 10px 30px;
    display: flex;
    width: 60vw;
}

.group-header_img {
    margin: 40px;
}

#group-header_img{
    border-radius: 8px;
}

.group-header_info {
    display: flex;
    flex-direction: column;
    margin: 15px;
}

#group-header_info_member_button {
    margin: 10px 0px;
}

.group-body {
    display: flex;
    padding: 0px 30px;
    justify-content: center;
    width: 60vw;
  }

.group-header,
.group-footer {
    background-color: #2C2629;
    padding: 0px 30px;
    width: 100%;
}

.group-body_feed {
    width: 100%;
}

.group-body_sidebar{
    display: flex;
    flex-direction: column;
    margin: 15px 0px;
    padding: 15px;
    background-color: #2C2629;
    border-radius: 4px;
    margin: 20px;
    height: 670px;
}

#group-body_sidebar_gallery {
    display: flex;
    flex-direction: row;
    flex-wrap:wrap;
    max-width: 650px;
}

#group-body_sidebar_gallery .user-image {
    margin: 10px;
}

#group-card_join-button {
    padding: 5px;
    color: #5DACBD;
    border: 2px solid #5DACBD;
    background-color: transparent;
}

#group-card_join-button:hover {
    padding: 5px;
    color: #5DACBD;
    border: 2px solid ;
    background-color: #2C2629;
    opacity: 0.9;
    box-shadow: rgba(93, 172, 189, 0.302) 2px 4px 16px;
    border-color: hsla(191, 42%, 55%, 0.702);
}

.create-event-button > a, .membership-button {
    padding: 10px;
    color: #5DACBD;
    background-color: #2C2629;
    border: 2px solid #5DACBD;
    border-radius: 999px;
    font-size: medium;
    margin-bottom: 4px;
}

.create-event-button > a:hover, .membership-button:hover {
    opacity: 0.8;
}

